Revise portfolio content and structure
Updated portfolio details including name, description, and project highlights.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Personal portfolio — projects, skills, and contact."
-    />
-    <title>Williams — Portfolio</title>
+    <meta name="description" content="Williams Tamayo — Software Engineer portfolio." />
+    <title>Williams Tamayo — Portfolio</title>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -19,7 +16,7 @@
       <div class="container header-inner">
         <a class="brand" href="#top" aria-label="Go to top">
           <span class="brand-dot" aria-hidden="true"></span>
-          <span>Williams</span>
+          <span>Williams Tamayo</span>
         </a>
 
         <button
@@ -41,10 +38,8 @@
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
 
-          <!-- Optional: add your resume link later -->
-          <a class="nav-cta" href="#" aria-disabled="true" title="Add your resume link later">
-            Resume
-          </a>
+          <!-- Put resume.pdf in the repo root -->
+          <a class="nav-cta" href="resume.pdf" download>Resume</a>
         </nav>
       </div>
     </header>
@@ -54,38 +49,38 @@
       <section id="top" class="hero">
         <div class="container hero-inner">
           <div class="hero-content">
-            <h1>Will <span class="muted">(replace with full name if you want)</span></h1>
-            <p class="subtitle">Software Engineer <span class="muted">(edit title)</span></p>
+            <h1>Williams Tamayo</h1>
+            <p class="subtitle">Software Engineer</p>
 
             <p class="lead">
-              <!-- Replace this paragraph with your real summary -->
-              I build software and polished user experiences. This page is a prototype portfolio
-              for GitHub Pages — more projects and skills coming soon.
+              🐧 Love linux and open source.
+              🎮 Love game development.
+              💻 Skilled in C#, Unity, .NET and game development.
+              🚀 Always learning and exploring new technologies.
+              🤝 Happy to collaborate on interesting projects.
             </p>
 
             <div class="hero-actions">
               <a class="btn" href="#projects">View Projects</a>
-              <a class="btn btn-ghost" href="#contact">Get in Touch</a>
+              <a class="btn btn-ghost" href="resume.pdf" download>Download Resume (PDF)</a>
             </div>
 
             <div class="hero-meta">
-              <!-- Replace these later (or delete them) -->
-              <span class="pill">Open to opportunities</span>
-              <span class="pill">Remote / On-site</span>
-              <span class="pill">USA</span>
+              <span class="pill">Linux & Open Source</span>
+              <span class="pill">Game Dev</span>
+              <span class="pill">Web Apps</span>
             </div>
           </div>
 
           <div class="hero-card" role="note" aria-label="Quick highlights">
             <h2 class="card-title">Quick Highlights</h2>
             <ul class="card-list">
-              <li>⚙️ OS + workflow tooling (WillwitcherOS)</li>
-              <li>🎮 Indie game release (Solstale)</li>
-              <li>🌐 Client website work (IV Plumbing Solutions)</li>
+              <li>⚙️ WillwitcherOS (Opinionated NixOS install)</li>
+              <li>🎮 Solstale (Unity, solo dev)</li>
+              <li>🧰 Warframe Utils (.NET web app)</li>
+              <li>🌐 IV Plumbing Solutions (HTML/CSS/JS site)</li>
             </ul>
-            <p class="card-footnote">
-              Tip: tell me your real bio + links and I’ll swap all placeholders.
-            </p>
+            <p class="card-footnote">Prototype portfolio — more projects coming soon.</p>
           </div>
         </div>
       </section>
@@ -94,31 +89,49 @@
       <section id="about" class="section">
         <div class="container">
           <h2>About</h2>
-          <p class="section-subtitle">
-            <!-- Replace this with your real "About me" -->
-            Write a short intro: what you specialize in, what you enjoy building, and what you’re looking for.
-          </p>
+          <p class="section-subtitle">A quick snapshot of what I’m into and what I build.</p>
 
           <div class="about-grid">
             <div class="card">
-              <h3>What I do</h3>
+              <h3>About Me</h3>
+              <ul class="card-list">
+                <li>🐧 Love linux and open source.</li>
+                <li>🎮 Love game development.</li>
+                <li>💻 Skilled in C#, Unity, .NET and game development.</li>
+                <li>🚀 Always learning and exploring new technologies.</li>
+                <li>🤝 Happy to collaborate on interesting projects.</li>
+              </ul>
+            </div>
+
+            <div class="card">
+              <h3>What I build</h3>
               <p class="muted">
-                Placeholder — add your focus areas (e.g., frontend, backend, cloud, systems, game dev, etc.).
+                Opinionated Linux setups, games, and practical web tools—focused on clean workflows and useful features.
               </p>
             </div>
 
             <div class="card">
-              <h3>What I care about</h3>
-              <p class="muted">
-                Placeholder — add 2–4 things (performance, clean UX, reliability, accessibility, open source, etc.).
-              </p>
-            </div>
-
-            <div class="card">
-              <h3>Currently building</h3>
-              <p class="muted">
-                Prototype list: WillwitcherOS, Solstale, and IV Plumbing Solutions website. More coming soon.
-              </p>
+              <h3>Links</h3>
+              <ul class="contact-list">
+                <li>
+                  <span class="muted">GitHub:</span>
+                  <a class="link" href="https://github.com/walberh96" target="_blank" rel="noreferrer">
+                    github.com/walberh96
+                  </a>
+                </li>
+                <li>
+                  <span class="muted">LinkedIn:</span>
+                  <a class="link" href="https://www.linkedin.com/in/walberh96/" target="_blank" rel="noreferrer">
+                    linkedin.com/in/walberh96
+                  </a>
+                </li>
+                <li>
+                  <span class="muted">Email:</span>
+                  <a class="link" href="mailto:willgamedevelopment@gmail.com">
+                    willgamedevelopment@gmail.com
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -129,16 +142,24 @@
         <div class="container">
           <h2>Skills</h2>
           <p class="section-subtitle">
-            You said you’ll share your skills later — for now this is a placeholder section.
+            Based on the current projects shown here (you’ll expand this later as you add more projects).
           </p>
 
           <div class="card">
-            <h3>Technical Skills (coming soon)</h3>
+            <h3>Tech used</h3>
             <div class="pill-row">
-              <span class="pill pill-muted">Add skills later</span>
-              <span class="pill pill-muted">Languages</span>
-              <span class="pill pill-muted">Frameworks</span>
-              <span class="pill pill-muted">Tools</span>
+              <span class="pill">NixOS</span>
+              <span class="pill">Linux</span>
+
+              <span class="pill">Unity</span>
+              <span class="pill">C#</span>
+
+              <span class="pill">.NET</span>
+              <span class="pill">ASP.NET MVC</span>
+
+              <span class="pill">HTML</span>
+              <span class="pill">CSS</span>
+              <span class="pill">JavaScript</span>
             </div>
           </div>
         </div>
@@ -148,28 +169,25 @@
       <section id="projects" class="section">
         <div class="container">
           <h2>Projects</h2>
-          <p class="section-subtitle">
-            Prototype list — you’ll add the rest later.
-          </p>
+          <p class="section-subtitle">Prototype list — more coming soon.</p>
 
           <div class="projects-grid">
             <!-- WillwitcherOS -->
             <article class="card project">
               <div class="project-top">
-                <h3>WillwitcherOS Endgame</h3>
+                <h3>WillwitcherOS</h3>
                 <span class="badge">Open Source</span>
               </div>
 
               <p class="muted">
-                A personalized desktop environment configuration built on NixOS and Hyprland,
-                including a flake-based setup and custom scripts.
+                An opinionated NixOS installation inspired by “Arch-like” workflows—keeping the feel of Arch while staying
+                Nix-based and reproducible (unbreakable).
               </p>
 
               <div class="pill-row">
                 <span class="pill">NixOS</span>
-                <span class="pill">Hyprland</span>
-                <span class="pill">Nix Flakes</span>
-                <span class="pill">Dotfiles</span>
+                <span class="pill">Linux</span>
+                <span class="pill">Reproducible Setup</span>
               </div>
 
               <div class="project-links">
@@ -187,12 +205,12 @@
               </div>
 
               <p class="muted">
-                A whimsical 2D platformer with cartoon-style visuals, designed to be accessible and fun for all ages.
+                A Unity game developed solo — I handled the entire project end-to-end.
               </p>
 
               <div class="pill-row">
-                <span class="pill">2D Platformer</span>
-                <span class="pill">Indie</span>
+                <span class="pill">Unity</span>
+                <span class="pill">Solo Dev</span>
                 <span class="pill">Steam</span>
               </div>
 
@@ -203,20 +221,46 @@
               </div>
             </article>
 
-            <!-- IV Plumbing Solutions website -->
+            <!-- Warframe Utils .NET -->
             <article class="card project">
               <div class="project-top">
-                <h3>IV Plumbing Solutions Website</h3>
-                <span class="badge">Web</span>
+                <h3>Warframe Utils (.NET)</h3>
+                <span class="badge">Web App</span>
               </div>
 
               <p class="muted">
-                Business website for a plumbing service (Miami). (We can refine this description once you tell me what you built/used.)
+                A set of tools for Warframe players that combines useful info about current game events with Warframe Market
+                prices for desired mods and items.
               </p>
 
               <div class="pill-row">
-                <span class="pill">Website</span>
-                <span class="pill">Client Work</span>
+                <span class="pill">C#</span>
+                <span class="pill">.NET</span>
+                <span class="pill">ASP.NET MVC</span>
+              </div>
+
+              <div class="project-links">
+                <a class="link" href="https://github.com/walberh96/Warframe-Utils-.NET" target="_blank" rel="noreferrer">
+                  GitHub →
+                </a>
+              </div>
+            </article>
+
+            <!-- IV Plumbing Solutions website -->
+            <article class="card project">
+              <div class="project-top">
+                <h3>IV Plumbing Solutions</h3>
+                <span class="badge">Website</span>
+              </div>
+
+              <p class="muted">
+                Business website built end-to-end using plain HTML, CSS, and JavaScript.
+              </p>
+
+              <div class="pill-row">
+                <span class="pill">HTML</span>
+                <span class="pill">CSS</span>
+                <span class="pill">JavaScript</span>
               </div>
 
               <div class="project-links">
@@ -233,9 +277,7 @@
       <section id="contact" class="section">
         <div class="container">
           <h2>Contact</h2>
-          <p class="section-subtitle">
-            Add your real links here and I’ll wire them up cleanly.
-          </p>
+          <p class="section-subtitle">Want to talk? Reach out:</p>
 
           <div class="contact-grid">
             <div class="card">
@@ -243,8 +285,14 @@
               <ul class="contact-list">
                 <li>
                   <span class="muted">Email:</span>
-                  <a class="link" href="#" aria-disabled="true" title="Send me your email to enable this">
-                    (add email)
+                  <a class="link" href="mailto:willgamedevelopment@gmail.com">
+                    willgamedevelopment@gmail.com
+                  </a>
+                </li>
+                <li>
+                  <span class="muted">LinkedIn:</span>
+                  <a class="link" href="https://www.linkedin.com/in/walberh96/" target="_blank" rel="noreferrer">
+                    linkedin.com/in/walberh96
                   </a>
                 </li>
                 <li>
@@ -253,28 +301,25 @@
                     github.com/walberh96
                   </a>
                 </li>
-                <li>
-                  <span class="muted">LinkedIn:</span>
-                  <a class="link" href="#" aria-disabled="true" title="Send me your LinkedIn to enable this">
-                    (add LinkedIn)
-                  </a>
-                </li>
               </ul>
+
+              <div class="pill-row" style="margin-top:14px;">
+                <a class="btn btn-ghost" href="resume.pdf" download>Download Resume (PDF)</a>
+              </div>
             </div>
 
             <div class="card">
-              <h3>What you’ll add later</h3>
+              <h3>Next upgrades</h3>
               <ul class="card-list">
-                <li>More projects + screenshots</li>
-                <li>Skills (real list)</li>
-                <li>Resume link</li>
-                <li>Optional: experience section</li>
+                <li>Add the rest of your projects</li>
+                <li>Expand skills as your project list grows</li>
+                <li>Optional: experience / timeline section</li>
               </ul>
             </div>
           </div>
 
           <footer class="footer">
-            <span>© <span data-year></span> Will. Built for GitHub Pages.</span>
+            <span>© <span data-year></span> Williams Tamayo. Built for GitHub Pages.</span>
           </footer>
         </div>
       </section>
