Update contact information and enhance portfolio content

--- a/resume.html
+++ b/resume.html
@@ -77,26 +77,18 @@
     <div class="subtitle">Software Engineer</div>
 
     <div class="contact">
-      <div>Email: <a href="mailto:willgamedevelopment@gmail.com">willgamedevelopment@gmail.com</a></div>
+      <div>Email: <a href="mailto:walberh96@yahoo.com">walberh96@yahoo.com</a></div>
       <div>GitHub: <a href="https://github.com/walberh96">github.com/walberh96</a></div>
       <div>LinkedIn: <a href="https://www.linkedin.com/in/walberh96/">linkedin.com/in/walberh96</a></div>
     </div>
 
     <h2>Summary</h2>
     <p class="summary">
-      Software engineer building products across web, mobile, and desktop platforms. Experienced with backend services, APIs,
-      and developer tooling. Comfortable shipping cross-platform experiences, including mobile and wearables, with strong
-      Linux-first workflows and an emphasis on automation and reproducibility.
+      Full stack engineer with deep experience building and shipping interactive experiences. Strong background in backend
+      services, full stack web development, game development, APIs, and automation with Linux-first workflows. Proven in
+      delivering cross-platform products and developer tools, with hands-on experience in Java, JavaScript, React, Node.js,
+      C#, .NET, Rust, and PostgreSQL.
     </p>
-
-    <h2>What I Build</h2>
-    <ul>
-      <li>Full-stack web applications and backend APIs.</li>
-      <li>Mobile experiences with React Native and Android.</li>
-      <li>Game systems and interactive experiences.</li>
-      <li>CLI/TUI tools for automation and developer workflows.</li>
-      <li>Cross-platform integrations, including wearables.</li>
-    </ul>
 
     <h2>Skills</h2>
     <div class="skills">
@@ -150,11 +142,11 @@
 
     <h2>Education</h2>
     <div class="project">
-      <div class="project-title">Software Engineer <span>CUJAE · Havana, Cuba · 09/2015 - 04/2018</span></div>
+      <div class="project-title">Software Engineer <span>CUJAE - Havana, Cuba - 09/2015 - 04/2018</span></div>
       <div class="project-desc">Software Engineering</div>
     </div>
     <div class="project">
-      <div class="project-title">Associate in Science in Telematics <span>ITSO · Orellana, Ecuador · 04/2018 - 09/2021</span></div>
+      <div class="project-title">Associate in Science in Telematics <span>ITSO - Orellana, Ecuador - 04/2018 - 09/2021</span></div>
       <div class="project-desc">Informatics and Telecommunications</div>
     </div>
   </body>
