--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Williams Tamayo — Software Engineer portfolio." />
-    <title>Williams Tamayo — Portfolio</title>
+    <meta name="description" content="Williams Tamayo - Software Engineer portfolio." />
+    <title>Williams Tamayo - Portfolio</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -16,7 +16,7 @@
       <div class="container header-inner">
         <a class="brand" href="#top" aria-label="Go to top">
           <span class="brand-dot" aria-hidden="true"></span>
-          <span>Williams Tamayo</span>
+          <span>Portfolio</span>
         </a>
 
         <button
@@ -33,7 +33,6 @@
         </button>
 
         <nav id="site-nav" class="nav" data-nav>
-          <a href="#about">About</a>
           <a href="#skills">Skills</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
@@ -51,66 +50,16 @@
           <div class="hero-content">
             <h1>Williams Tamayo</h1>
             <p class="subtitle">Software Engineer</p>
-
             <p class="lead">
-              🐧 Love Linux and open source.
-              🎮 Love game development.
-              🧠 Enjoy challenging problems and building new things.
-              🚀 Always learning and exploring new technologies.
-              🤝 Happy to collaborate on interesting projects.
+              Full stack engineer with deep experience building and shipping interactive experiences. Strong background in
+              backend services, full stack web development, game development, APIs, and automation with Linux-first workflows.
+              Ready to deliver cross-platform products and developer tools, with hands-on experience in Java, JavaScript,
+              React, Node.js, C#, .NET, Rust, and PostgreSQL.
             </p>
 
             <div class="hero-actions">
               <a class="btn" href="#projects">View Projects</a>
               <a class="btn btn-ghost" href="resume.pdf" download>Download Resume (PDF)</a>
-            </div>
-
-            <div class="hero-meta">
-              <span class="pill">Linux & Open Source</span>
-              <span class="pill">Game Dev</span>
-              <span class="pill">CLI & TUI Tools</span>
-            </div>
-          </div>
-
-          <div class="hero-card" role="note" aria-label="Quick highlights">
-            <h2 class="card-title">Quick Highlights</h2>
-            <ul class="card-list">
-              <li>⚙️ WillwitcherOS (Opinionated NixOS install)</li>
-              <li>🎮 Solstale (Unity, solo dev)</li>
-              <li>🧰 Warframe Utils (.NET web app)</li>
-              <li><span class="nf-inline" aria-hidden="true"></span> FitRPG (ASP.NET Core, React Native)</li>
-              <li><span class="nf-inline" aria-hidden="true"></span> Waycast (Rust TUI script packages)</li>
-              <li>🌐 IV Plumbing Solutions (HTML/CSS/JS site)</li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <!-- ABOUT -->
-      <section id="about" class="section">
-        <div class="container">
-          <h2>About</h2>
-          <div class="about-grid">
-            <div class="card">
-              <h3>About Me</h3>
-              <ul class="card-list">
-                <li>Software engineer building products across web, mobile, and desktop platforms.</li>
-                <li>Experienced with backend services, APIs, and developer tooling.</li>
-                <li>Comfortable shipping cross-platform experiences, including mobile and wearables.</li>
-                <li>Strong Linux-first workflows with an emphasis on automation and reproducibility.</li>
-                <li>Driven by turning ideas into real, usable products and iterating fast.</li>
-              </ul>
-            </div>
-
-            <div class="card">
-              <h3>What I build</h3>
-              <ul class="card-list">
-                <li>Full-stack web applications and backend APIs.</li>
-                <li>Mobile experiences with React Native and Android.</li>
-                <li>Game systems and interactive experiences.</li>
-                <li>CLI/TUI tools for automation and developer workflows.</li>
-                <li>Cross-platform integrations, including wearables.</li>
-              </ul>
             </div>
           </div>
         </div>
@@ -162,8 +111,7 @@
               </div>
 
               <p class="muted">
-                An opinionated NixOS installation inspired by “Arch-like” workflows—keeping the feel of Arch while staying
-                Nix-based and reproducible (unbreakable).
+                An opinionated NixOS installation inspired by "Arch-like" workflows - keeping the feel of Arch while staying Nix-based and reproducible (unbreakable).
               </p>
 
               <div class="pill-row">
@@ -174,8 +122,7 @@
 
               <div class="project-links">
                 <a class="link" href="https://github.com/walberh96/willwitcher-OS-Endgame" target="_blank" rel="noreferrer">
-                  GitHub →
-                </a>
+                  GitHub -></a>
               </div>
             </article>
 
@@ -187,7 +134,7 @@
               </div>
 
               <p class="muted">
-                A Unity game developed solo — I handled the entire project end-to-end.
+                A Unity game developed solo - I handled the entire project end-to-end.
               </p>
 
               <div class="pill-row">
@@ -198,8 +145,7 @@
 
               <div class="project-links">
                 <a class="link" href="https://store.steampowered.com/app/2719860/Solstale/" target="_blank" rel="noreferrer">
-                  Steam →
-                </a>
+                  Steam -></a>
               </div>
             </article>
 
@@ -224,8 +170,7 @@
 
               <div class="project-links">
                 <a class="link" href="https://github.com/walberh96/Warframe-Utils-.NET" target="_blank" rel="noreferrer">
-                  GitHub →
-                </a>
+                  GitHub -></a>
               </div>
             </article>
             <!-- FitRPG -->
@@ -249,8 +194,7 @@
 
               <div class="project-links">
                 <a class="link" href="https://github.com/walberh96/FitRPG" target="_blank" rel="noreferrer">
-                  GitHub +
-                </a>
+                  GitHub -></a>
               </div>
             </article>
             <!-- Waycast -->
@@ -276,8 +220,7 @@
 
               <div class="project-links">
                 <a class="link" href="https://github.com/walberh96/Waycast" target="_blank" rel="noreferrer">
-                  GitHub +
-                </a>
+                  GitHub -></a>
               </div>
             </article>
             <!-- IV Plumbing Solutions website -->
@@ -300,8 +243,7 @@
 
               <div class="project-links">
                 <a class="link" href="https://ivplumbingsolutions.com" target="_blank" rel="noreferrer">
-                  Live Site →
-                </a>
+                  Live Site -></a>
               </div>
             </article>
           </div>
@@ -316,12 +258,11 @@
 
           <div class="contact-grid">
             <div class="card">
-              <h3>Reach me</h3>
               <ul class="contact-list">
                 <li>
                   <span class="muted">Email:</span>
-                  <a class="link" href="mailto:willgamedevelopment@gmail.com">
-                    willgamedevelopment@gmail.com
+                  <a class="link" href="mailto:walberh96@yahoo.com">
+                    walberh96@yahoo.com
                   </a>
                 </li>
                 <li>
@@ -337,15 +278,10 @@
                   </a>
                 </li>
               </ul>
-
-              <div class="pill-row" style="margin-top:14px;">
-                <a class="btn btn-ghost" href="resume.pdf" download>Download Resume (PDF)</a>
-              </div>
-            </div>
-</div>
+            </div>          </div>
 
           <footer class="footer">
-            <span>© <span data-year></span> Williams Tamayo. Built for GitHub Pages.</span>
+            <span>&copy; <span data-year></span> Williams Tamayo. Built for GitHub Pages.</span>
           </footer>
         </div>
       </section>
@@ -354,6 +290,15 @@
     <script src="script.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
 
 
 
