--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -92,20 +92,14 @@
 
     <h2>Skills</h2>
     <div class="skills">
-      <span>NixOS</span><span>Linux</span><span>Unity</span><span>C#</span><span>Rust</span><span>.NET</span>
-      <span>ASP.NET Core</span><span>ASP.NET MVC</span><span>PostgreSQL</span><span>HTML</span><span>CSS</span>
-      <span>JavaScript</span><span>CLI/TUI</span><span>Bash</span><span>Python</span><span>React Native</span>
+      <span>NixOS</span><span>Linux</span><span>Unity</span><span>C#</span><span>Steam</span><span>Rust</span>
+      <span>.NET</span><span>ASP.NET Core</span><span>ASP.NET MVC</span><span>PostgreSQL</span><span>MySQL</span>
+      <span>PHP</span><span>Mirror</span><span>HTML</span><span>CSS</span><span>JavaScript</span><span>CLI/TUI</span>
+      <span>Bash</span><span>Python</span><span>JSON</span><span>Cross-platform</span><span>React Native</span>
       <span>Android</span><span>Java</span>
     </div>
 
     <h2>Projects</h2>
-    <div class="project">
-      <div class="project-title">WillwitcherOS <span>OS Configuration</span></div>
-      <div class="project-desc">
-        An opinionated NixOS installation inspired by Arch-like workflows, focused on reproducibility and reliability.
-      </div>
-      <div class="project-desc"><a href="https://github.com/walberh96/willwitcher-OS-Endgame">github.com/walberh96/willwitcher-OS-Endgame</a></div>
-    </div>
     <div class="project">
       <div class="project-title">Solstale <span>Game</span></div>
       <div class="project-desc">A Unity game developed solo, managed end-to-end.</div>
@@ -133,6 +127,13 @@
         installs for reliable runs.
       </div>
       <div class="project-desc"><a href="https://github.com/walberh96/Waycast">github.com/walberh96/Waycast</a></div>
+    </div>
+    <div class="project">
+      <div class="project-title">WillwitcherOS <span>OS Configuration</span></div>
+      <div class="project-desc">
+        An opinionated NixOS installation inspired by Arch-like workflows, focused on reproducibility and reliability.
+      </div>
+      <div class="project-desc"><a href="https://github.com/walberh96/willwitcher-OS-Endgame">github.com/walberh96/willwitcher-OS-Endgame</a></div>
     </div>
     <div class="project">
       <div class="project-title">IV Plumbing Solutions <span>Website</span></div>
